<resources>
    <string name="app_name">ProTest</string>
    <string name="title_name">Pro Test</string>
    <string name="logo">Logo</string>
    <string name="action_acerca">Acerca de</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_settings">Opciones</string>
    <string name="title_activity_acerca">Acerca de</string>
    <string name="acerca_nombre">Nombre:</string>
    <string name="acerca_nomyape" translatable="false">Jesús Sánchez Ruiz</string>
    <string name="acerca_telefono">Telefono:</string>
    <string name="acerca_numero" translatable="false">637153377</string>
    <string name="acerca_email">E-mail:</string>
    <string name="acerca_correo" translatable="false">js_ruiz@icloud.com</string>
    <string name="resumen_preguntas">Preguntas disponibles:</string>
    <string name="resumen_categoria">Categorias disponibles:</string>
    <string name="resumen_cuestionarios">Cuestionarios realizados:</string>
    <string name="resumen_calificacion">Calificacion media:</string>
    <string name="title_activity_listado">Preguntas</string>
    <string name="action_preguntas">Preguntas</string>
    <string name="listado_informacion">Aún no has añadido ninguna pregunta</string>
    <string name="listado_boton">Editar</string>
    <string name="title_activity_anadir">Añadir</string>
    <string name="anadir_enunciado">Pregunta</string>
    <string name="anadir_res_correcta">Respuesta correcta</string>
    <string name="anadir_res_incorrecta1">Respuesta incorrecta</string>
    <string name="anadir_res_incorrecta2">Respuesta incorrecta</string>
    <string name="anadir_res_incorrecta3">Respuesta incorrecta</string>
    <string name="anadir_boton">Aceptar</string>
    <string name="write_permiso_denegado">Permiso denegado</string>
    <string name="write_permiso_aceptado">Permiso aceptado</string>
    <string name="categoria">Categoria</string>
    <string name="anadir_categoria">Nueva categoria</string>
    <string name="anadir_opcion">Añadir nueva opcion</string>
    <string name="opcion_elegida">Tu opcion</string>
    <string name="add" >Añadir</string>
    <string name="cancel" >Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="delete">eliminar</string>
    <string name="eliminarPregunta">¿Estar Seguro?</string>
    <string name="pregunta">Preguntas disponibles:</string>
    <string name="contarCategorias">Categorias disponibles:</string>
    <string name="from_gallery">Cargar imagen desde la galería</string>
    <string name="from_camera">Cargar imagen desde la cámara</string>
    <string name="choose_picture">Elige una imagen</string>
    <string name="error_files">Error creando archivos</string>
    <string name="export">Exportar</string>
    <string name="borrar_imagen">Borrar imagen</string>

</resources>
