<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Anadir">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/PreguntaeditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="134dp"
            android:ems="10"
            android:hint="@string/anadir_enunciado"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="198dp"
            android:hint="@string/categoria" />

        <EditText
            android:id="@+id/respuestaCorrecta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spinner"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="306dp"
            android:ems="10"
            android:hint="@string/anadir_res_correcta"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/respuestaIncorrecta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spinner"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="152dp"
            android:ems="10"
            android:hint="@string/anadir_res_incorrecta1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/respuestaIncorrecta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spinner"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="83dp"
            android:ems="10"
            android:hint="@string/anadir_res_incorrecta2"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/respuestaIncorrecta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spinner"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/anadir_res_incorrecta3"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/botonAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="32dp"
            android:text="@string/anadir_boton" />

        <Button
            android:id="@+id/botoncat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PreguntaeditText"
            android:layout_alignParentStart="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="61dp"
            android:text="@string/anadir_categoria" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>