<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDe">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="74dp"
            android:text="@string/acerca_nombre"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="66dp" />

        <TextView
            android:id="@+id/nomyape"
            android:layout_width="127dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="74dp"
            android:text="@string/acerca_nomyape"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="65dp" />

        <TextView
            android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="107dp"
            android:text="@string/acerca_telefono"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="98dp" />

        <TextView
            android:id="@+id/numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="107dp"
            android:text="@string/acerca_numero" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/numero"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-63dp"
            android:layout_marginTop="137dp"
            android:text="@string/acerca_email" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/numero"
            android:layout_alignTop="@+id/email"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="0dp"
            android:text="@string/acerca_correo" />
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>